# automata-inference

./: .gitignore  LICENSE  README.md  automata_factory.py  automaton.py  distributions.py  guards.py  main.py  minimization.py  mypy.ini  program_statements.py  pylintrc  pyproject.toml  requirements.txt  visualizer.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
automata_inference/: automata_factory.py  distributions.py  guards.py  main.py  program_context.py  program_statements.py  visualizer.py
automata_inference/parser/: parser.py
examples/: ICTAC.pgcl  ictac_example.py  piranha.pgcl
tests/: utils.py
tests/inference/: test_inference.py
tests/pga_operations/: test_concat.py  test_decrement.py  test_minimize.py  test_probability_mass.py  test_product.py  test_resolve_conflict.py  test_substitute.py  test_transition_substitution.py  test_utils.py  test_weighted_union.py  utils.py
