[tool.poetry]
name = "automata-inference"
version = "0.1.0"
description = ""
authors = ["Dominik <dominik.geissler@tu-berlin.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
graphviz = "^0.21"
symengine = "^0.14.1"
lark = "^1.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pylint = "^4.0.0"
mypy = "^1.18.2"
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
